--- a/sass/partials/_mobile.scss
+++ b/sass/partials/_mobile.scss
@@ -25,7 +25,10 @@
     width: 80%;
     font-size: 1.5em;
     margin-bottom: 10%;
-    li {margin-top: 5%;}
+    li {
+      margin-top: 5%;
+      h3 { width: 95%; }
+    }
   }
 }
 
